--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body{
 
 .botao.ativo{
     background-color: var(--botao-ativo);
-    border-bottom: 2px solid var(--rosa);
+    border-bottom: 5px solid var(--rosa);
 }
 
 .abas-textos{
@@ -87,6 +87,29 @@ body{
     color: var(--rosa);
     text-align: center;
     text-transform: uppercase;
+}
+
+.contador{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.contador-digito{
+    padding: 0 16px;
+    text-align: center;
+    min-width: 100px;
+}
+
+.contador-digito-numero{
+    font-size: 80px;
+    margin: 0;
+}
+
+.contador-digito-texto{
+    font-size: 35px;
+    color: var(--rosa);
+    margin: 0;
 }
 
 
